# pwgen

./: Makefile.in  configure.in  pw_phonemes.c  pw_rand.c  pwgen.c  pwgen.h  randnum.c  sha1num.c
debian/: changelog  control  rules
